made a change to LoaninTemplate.html on the CSPACE-4391 branch.

--- a/src/main/webapp/defaults/html/pages/LoaninTemplate.html
+++ b/src/main/webapp/defaults/html/pages/LoaninTemplate.html
@@ -1,3 +1,4 @@
+ADDING SOME TEXT AT THE HEAD IN CSPACE-4391 BRANCH.
 <div class="csc-loanin-template csc-listEditor-details">
     <div class="csc-loanin">
         <div id="secondary-nav">		
