CSPACE-4391: small fixes to UI. Two search fields still not working.

--- a/src/main/webapp/defaults/html/pages/PlaceTemplate.html
+++ b/src/main/webapp/defaults/html/pages/PlaceTemplate.html
@@ -50,7 +50,7 @@
 	                    </div>
 	                    <!-- placeRecordAdminStatus ("Admin status") discarded in favor of ... -->
 	                    <!-- Term status field common to all authorities -->
-	                    <!--<div class="four-across fl-force-left">
+	                    <!--<div class="size1of4 fl-force-left">
 	                        <div class="info-pair">
 	                            <div class="header">
 	                                <div class="label csc-place-placeRecordAdminStatus-label"></div>
